layout shift fixed with custom tabs

--- a/uikit/custom/theme/main.less
+++ b/uikit/custom/theme/main.less
@@ -342,6 +342,13 @@ body .InputfieldForm div.cke_editable_inline.cke_focus {
   display: block !important;
 }
 
+.ProcessPageEdit .InputfieldWrapper {
+  display: none;
+}
+
+.pw-ready .ProcessPageEdit .InputfieldWrapper {
+  display: block;
+}
 
 .pw-primary-nav {
   padding-right: 10px;
